# Appender

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  README.zh.md  build.bat
resource/: resource.rc
src/: cli.rs  core.rs  main.rs  tests.rs  util.rs
