[package]
name = "Appender"
version = "1.2.0"
edition = "2024"
build = "build.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
embed-resource = "3.0.6"
thunk-rs = "0.3.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
memchr = "2.7.6"
flate2 = "1.1.8"
anyhow = "1.0.100"
indicatif = "0.18.3"
